# at-ai-editor-recommender-l3

./: .env  .gitignore  Dockerfile  README.md  db_check.py  db_check2.py  db_check3.py  db_check4.py  ee_workflow_langgraph_otel.py  fake_data.py  prompts.py  pyproject.toml  requirements-ui.txt  resilience.py  run_poc.py  start.ps1  streamlit_app.py  utils.py
.github/workflows/: docker-langgraph.yaml  docker-strands.yaml  docker.yaml
docs/: ENG-9411-Deployment-Improvement-Proposal.pptx  Editor_Recommender_Memory_System.pptx  Rolling-Update-Validation.pptx  Strands_Migration_Editor_Recommender.pptx  build_strands_ppt.py  check_db.py  create_memory_ppt.py  create_ppt.py  create_rolling_update_ppt.py  memory-implementation-poc-v2.pptx  memory-implementation-poc.pptx  memory-implementation.md  strands-migration-analysis.md
framework-comparison/: README.md  langgraph_calc.py  requirements.txt  run.ps1  strands_calc.py  streamlit_app.py
irsa/: er-bedrock-policy.json  er-bedrock-role.json
jira-mcp-server/: .env.example  README.md  claude_desktop_config.json  jira_client.py  mcp_server.py  pyproject.toml  requirements.txt  test_connection.py  uv.toml
k8s/: deployment-irsa.yaml  er-bedrock-sa.yaml
k8s/dev/: er-bedrock-sa.yaml
k8s/dev/at-ai-editor-recommender/: deployment-irsa.yaml  er-bedrock-sa.yaml  service.yaml
k8s/dev/at-ai-editor-recommender/prompts/journal_specific_rules/: JRN002.md
k8s/dev/ee-api/: busybox-bak.yaml  busybox.yaml  deployment.yaml  onprem-aimodels-pv.yaml  onprem-aimodels-pvc.yaml  pv.yaml  pvc.yaml  service.yaml
k8s/dev/ee-api-poc/: deployment.yaml  service.yaml
k8s/dev/langgraph-service/: deployment.yaml  service.yaml
k8s/dev/phoenix/: values.yaml
k8s/dev/strands-coi-service/: deployment.yaml  service.yaml
k8s/sandbox/: deployment-irsa.yaml
k8s/sandbox/at-ai-editor-recommender/: deployment-irsa.yaml  deployment.yaml
k8s/sandbox/ee-api-poc/: deployment.yaml
langgraph_service/: Dockerfile  a2a_handler.py  agent_card.py  callback_server.py  editor_utils.py  graph.py  pyproject.toml  react_agent.py  requirements.txt  routes.py  scoring.py
memory-poc/: README.md  agent.py  app.py  memory.py  ui.py
memory-poc/tests/: test_memory.py
mock_editors/: 1.md
prompts/available_editors/: available_editors.jinja2
prompts/journal_specific_rules/: DEFAULT.md  JRN001.md  JRN001v3.md  ci.md  jm.md  oc.md
prompts/manuscript_information/: manuscript_information.jinja2
src/at_ai_editor_recommender/: app.py  client.py  client_api.py  demo.py  editor_assignment_json_parser.py  ee_agent_strands.py  ee_api_adapter.py  ee_graph.py  ee_graph_anthropic.py  ee_graph_claude.py  ee_workflow_langgraph_otel.py  ee_workflow_langgraph_otel_lc.py  memory.py  prompts.py  test_irsa.py  utils.py
strands_service/: Dockerfile  a2a_handler.py  agent_card.py  coi_agent.py  pyproject.toml  requirements.txt  server.py
tests/: poc_memory_demo.py  test_callback_server.py  test_coi_agent.py  test_fake_data.py  test_memory.py  test_memory_integration.py  test_memory_local.py  test_resilience.py  test_scoring.py  test_streamlit_app.py
travel-planner-poc/: .env.example  README.md  agent.py  db.py  memory.py  mock_data.py  pyproject.toml  start.ps1  streamlit_app.py  tools.py
travel-planner-poc/tests/: test_memory_poc.py
