[project]
name = "at-ai-editor-recommender-langgraph"
version = "0.1.0"
description = "LangGraph orchestrator service — editor assignment with A2A + HITL"
readme = "README.md"
requires-python = "==3.12.*"
dependencies = [
    "starlette>=0.42.0",
    "uvicorn>=0.35.0",
    "a2a-sdk>=0.3.25",
    "langgraph>=0.6.4",
    "langchain-aws>=0.2.30",
    "httpx>=0.28.0",
    "aioboto3>=7.0.0",
    "boto3>=1.40.0",
    "pydantic>=2.0.0",
]

[build-system]
requires = ["uv_build>=0.8,<0.9"]
build-backend = "uv_build"

[dependency-groups]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.24.0",
]
